# yandex-metrika-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  server.json
src/yandex_metrica_mcp/: __init__.py  server.py
src/yandex_metrika_mcp/: __init__.py  server.py
tests/: test_build_server.py  test_client.py  test_live_smoke.py
