[project]
name = "yandex-metrica-mcp"
version = "0.1.0"
description = "Read-only MCP server for Yandex Metrica analytics. An aiaiai open-source AI-native tool."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "aiaiai", email = "georgy@expremiental.com" }]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.scripts]
yandex-metrica-mcp = "yandex_metrica_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yandex_metrica_mcp"]
