[project]
name = "yandex-metrika-mcp"
version = "0.1.0"
description = "Read-only MCP server for Yandex Metrika analytics. An aiaiai open-source AI-native tool."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "aiaiai", email = "georgy@expremiental.com" }]
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
]

[project.scripts]
yandex-metrika-mcp = "yandex_metrika_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yandex_metrika_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
